<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actLogin">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_above="@+id/tvUser"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/tvUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/llLogin"
        android:layout_marginBottom="50dp"
        android:gravity="right"
        android:paddingEnd="60dp"
        android:text="@string/user"
        android:textColor="@color/violet_text"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/llLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <TextView
            android:id="@+id/tvIniciarSesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/iniciar_sesion"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"

            android:hint="@string/correo_e">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginVertical="10dp"
                android:hint="@string/correo_e"
            android:inputType="textEmailAddress"
            android:maxLength="100"
            android:padding="7dp"
            android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            android:hint="@string/contraseña">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginVertical="10dp"
                android:hint="@string/contraseña"
                android:inputType="textPassword"
                android:maxLength="100"
                android:padding="7dp"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnIngresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="30dp"
            android:text="@string/entrar"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/violet_text" />

        <TextView
            android:id="@+id/tvCrearCuenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crear_cuenta"
            android:textColor="@color/violet_text"
            android:textStyle="bold"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/tvReestablecerPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reestablecer_contrase_a"
            android:textColor="@color/violet_text"
            android:textStyle="bold"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"/>

    </LinearLayout>

</RelativeLayout>
